<resources>
    <string name="app_name">MQTT Kotlin Sample App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="connect_fragment_label">Connect Fragment</string>
    <string name="client_fragment_label">Client Fragment</string>

    <string name="button_connect_text">Connect</string>
    <string name="button_prefill_text">Prefill</string>
    <string name="button_clean_text">Clean</string>

    <string name="server_uri_text">Server URI</string>
    <string name="client_id_text">Client ID</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>

    <string name="button_disconnect_text">Disconnect</string>
    <string name="button_publish_text">Publish</string>
    <string name="button_subscribe_text">Subscribe</string>
    <string name="button_unsubscribe_text">Unsubscribe</string>
    <string name="message_text">Message</string>
	<string name="device_name">Device name</string>
    <string name="topic">Topic</string>
    <string name="qos">Qos</string>
	<string name="plus_text">+</string>
	<string name="name_of_graph">Graph</string>
    <string name="value">Value</string>
    <string name="top_limit">TopLimit</string>
    <string name="bottom_limit">BottomLimit</string>
	<string name="iterations">Iterations</string>
    <string name="value_of_topic">Value</string>
    <string name="type_of_value">TypeOfValue</string>

</resources>