<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".presentation.screens.deviceinfo.DeviceInfoFragment">

	<com.androidplot.xy.XYPlot
		android:id="@+id/graph"
		style="@style/APDefacto.LightCustom"
		android:layout_width="0dp"
		android:layout_height="300dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textX">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:paddingBottom="16dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/top_limit"
				android:textColor="@color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/textTopLimit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:paddingBottom="16dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/value_of_topic"
				android:textColor="@color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/textValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:paddingBottom="16dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/bottom_limit"
				android:textColor="@color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/textBottomLimit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:paddingBottom="16dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/device_name"
				android:textColor="@color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/textDeviceName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:paddingBottom="16dp">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/topic"
				android:textColor="@color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/textDeviceTopic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/qos"
				android:textColor="@color/black"
				android:textSize="16sp" />

			<TextView
				android:id="@+id/textQos"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/black"
				android:textSize="16sp" />
		</LinearLayout>
	</LinearLayout>

	<TextView
		android:id="@+id/textX"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:text="@string/iterations"
		android:textColor="@color/black"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="@+id/graph"
		app:layout_constraintTop_toBottomOf="@+id/graph" />

</androidx.constraintlayout.widget.ConstraintLayout>